--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,34 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://faveo.join.com/jobs/463891-junior-product-manager-m-w-d'>Job @ faveo (Essen): Junior Product Manager (m/w/d) | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://stackpath.applytojob.com/apply/hliJrHTPcZ/Edge-Computing-Product-Manager'>Edge Computing - Product Manager - StackPath - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/oMbsbfwk'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
+<p><span class="badge badge-light">London  London  London London  London  London</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/oPcsbfwo'>Justice Digital and Technology Careers - Senior Product Manager, London</a></h5> 
+<p><span class="badge badge-light">London  London  London London  London  London</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/olcsbfwU'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
+<p><span class="badge badge-light">London London  London  London</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/blackswan/jobs/4496053002'>Job Application for Product Manager  at Black Swan Data Ltd</a></h5> 
+<p><span class="badge badge-light">London</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oClgbfw8&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=n7SJoMwn'>Egnyte Careers - Senior Product Manager - Data Governance (Protect)</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -52,7 +80,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oMbsbfwk&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5NAoMw7'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oMbsbfwk&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5NAoMw7'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -126,7 +154,7 @@
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lillydoo.join.com/jobs/470348-product-owner-f-m-d'>Job @ LILLYDOO (Frankfurt): Product Owner (f/m/d) | JOIN</a></h5> 
+<h5><a href='https://lillydoo.join.com/jobs/470348-product-owner-f-m-d'>Job @ LILLYDOO (Frankfurt): Product Owner (f/m/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -190,7 +218,7 @@
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://farmersfridge.applytojob.com/apply/YU3Zt1kBNS/Product-Manager-Business-Operations'>Product Manager, Business Operations - Farmer's Fridge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://farmersfridge.applytojob.com/apply/YU3Zt1kBNS/Product-Manager-Business-Operations'>Product Manager, Business Operations - Farmer's Fridge - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -320,7 +348,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tivix/f725b17f-159b-4c4e-a31a-2e400c22a73c'>Tivix - Digital Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/tivix/f725b17f-159b-4c4e-a31a-2e400c22a73c'>Tivix - Digital Product Manager</a></h5> 
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -425,38 +453,8 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://spryker.join.com/jobs/464517-product-manager-spryker-commerce-os-m-f-d'>Job @ Spryker System (Berlin): Product Manager - S... | JOIN</a></h5> 
+<h5><a href='https://spryker.join.com/jobs/464517-product-manager-spryker-commerce-os-m-f-d'>Job @ Spryker System (Berlin): Product Manager - S... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://itatalentportal.com/job/product-owner/51249346/'>Product Owner Job Opening in Chicago, Illinois - Illinois Technology Association Career Center</a></h5> 
-<p><span class="badge badge-light">Chicago, Illinois</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://joinoyster.recruitee.com/o/product-manager'>
-      Product Manager - Oyster Financial Inc 
-    </a></h5> 
-<p><span class="badge badge-light">Mexico Mexico</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
-<p><span class="badge badge-light">San Francisco, California</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
-<p><span class="badge badge-light">San Francisco, California</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://coachhub.join.com/jobs/458113-senior-product-manager-m-w-d'>Job @ Coachhub (Berlin): Senior Product Manager (m... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698384534-product-manager-digital-printing-materials-graphics-'>Avery Dennison Product Manager - Digital Printing Materials (Graphics) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Oegstgeest, Netherlands</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/rekki/4fd3cb95-3483-4286-857b-a38fdb0d9df0'>Rekki - Product Designer</a></h5> 
-<p><span class="badge badge-light">London  London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
