--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -80,7 +80,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='http://formstack.applytojob.com/apply/okWvPyTidz/Privacy-Analyst'>Privacy Analyst - Formstack - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://formstack.applytojob.com/apply/okWvPyTidz/Privacy-Analyst'>Privacy Analyst - Formstack - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -234,7 +234,7 @@ privacy?...</p>
 Privacy Office based in Cork, Ireland. You would work directly with the European
 ?...</p>
 <hr/>
-<h5><a href='https://landolakes.wd1.myworkdayjobs.com/en-US/LandOLakes/job/Arden-Hills-MN-USA/Data-Privacy-Compliance-Specialist_R-8434'>Data Privacy Compliance Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://landolakes.wd1.myworkdayjobs.com/en-US/LandOLakes/job/Arden-Hills-MN-USA/Data-Privacy-Compliance-Specialist_R-8434'>Data Privacy Compliance Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 14, 2019 ... programs and services. The Data Privacy/Compliance Specialist will be 
 responsible for facilitating the development and implementation of a data privacy 
@@ -290,7 +290,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
@@ -338,7 +338,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-06-04</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/shopee/jobs/4311067002'>Job Application for Information Security &amp; Privacy Analyst at Shopee</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopee/jobs/4311067002'>Job Application for Information Security &amp; Privacy Analyst at Shopee</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-03</p>
 <hr/>
@@ -405,7 +405,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/etsy/b2605ca0-523f-47e9-a66f-f6b8a3d0d342'>Etsy - Senior Privacy Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
